--- a/layout/layout08.html
+++ b/layout/layout08.html
@@ -27,6 +27,7 @@
         }
         
         main {
+            width: 100%;
             overflow: hidden;
         }
 
@@ -50,12 +51,19 @@
             background-color: #ab47bc;
         }
 
-        @media (max-width: 1210px){
+        @media (max-width: 1220px){
+            #wrap {
+                width: 94%;
+            }
+        }
+
+        @media (max-width: 800px){
             #wrap {
                 width: 100%;
             }
         }
-        @media (max-width: 600px){
+
+        @media (max-width: 800px){
             aside {
                 float: none;
                 width: 100%;
