--- a/layout/layout10.html
+++ b/layout/layout10.html
@@ -16,7 +16,7 @@
             background-color: #e1f5fe;
         }
 
-        #wrad {
+        #wrap {
             width: 1200px;
             margin: 0 auto;
         }
@@ -67,7 +67,7 @@
         }
 
         @media(max-width : 1220px){
-            #wrad {
+            #wrap {
                 width: 100%;
             }
         }
@@ -123,7 +123,7 @@
     </style>
 </head>
 <body>
-    <div id=wrad>
+    <div id="wrap">
         <header></header>
         <main>
             <address></address>
