--- a/site/CSS/cardtype.css
+++ b/site/CSS/cardtype.css
@@ -1,8 +1,15 @@
 /* 카드 타입 유형 */
+body {
+    background-color: #f3f3f3;
+}
 
 
 /* cardType01 */
-#cardType {}
+#cardType {
+    margin: 150px 0;
+    background-color: #fff;
+    box-shadow: 0 0 50px rgba(0,0,0,0.1);
+}
 
 .cardType01 {
     font-family: 'GmarketSans';
@@ -34,24 +41,30 @@
 } */
 
 /* flex를 이용한 레이아웃 */
-.card-wrap {
+
+.cardType01 .card-wrap {
     display: flex;
     justify-content: space-between;
 }
-.card-wrap > div {
+
+.cardType01 .card-wrap > div {
     width: 387px;
 }
 
-.card {}
-.card .card-img {}
-.card .card-title {
+
+.cardType01 .card {}
+
+.cardType01 .card .card-img {}
+
+.cardType01 .card .card-title {
     display: block;
     font-size: 32px;
     white-space: nowrap;    /* 한줄 효과 */
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.card .card-desc {
+
+.cardType01 .card .card-desc {
     display: block;
     font-size: 20px;
     font-weight: 300;
@@ -60,7 +73,8 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-.card .card-keyword {
+
+.cardType01 .card .card-keyword {
     font-size: 16px;
     font-weight: 300;
     opacity: 0.5;
@@ -68,15 +82,20 @@
 
 /* cardType02 */
 
+.cardType {
+    margin: 100px 0;
+    background-color: #fff;
+    box-shadow: 0 0 50px rgba(0,0,0,0.1);
+}
 .cardType02 {
     font-family: 'S-CoreDream';
-    padding: 100px 0;
+    padding: 150px 0;
 }
 .cardType02 h2 {
     text-align: center;
     font-weight: 800;
     font-size: 50px;
-    margin-bottom: 15px; 
+    margin-bottom: 7px; 
 }
 .cardType02 p {
     text-align: center;
@@ -86,63 +105,36 @@
     margin-bottom: 40px;
 }
 
-.card-wrap2 {
+.cardType02 .card-wrap {
     display: flex;
-    justify-content: space-between;
 }
-.card-wrap2 > div {
-    width: 387px;
-}
-
-.card2 {
+.cardType02 .card-wrap .card{
     width: 285px;
-    height: 360px;
-    border: 1px solid #E8E8E8;
-    margin: 10px 0px 0 20px;
-    padding: 15px 13px 0px;
-    background-color: #fff;
-}
-.card2 .card-img {}
-.card2 .card-title {
-    text-align: center;
-    display: block;
-    font-size: 28px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.card2 .card-desc {
-    font-family: 'NEXON Lv1 Gothic';
-    font-weight: 500;
-    display: block;
-    font-size: 16px;
-    font-weight: 300;
-    overflow: hidden;       
-    display: -webkit-box;
-    margin-top: 12px;
-    margin-bottom: 14px;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
-.card2 .card-keyword {
-    font-family: 'NEXON Lv1 Gothic';
-    background: #000;
-    text-align: center;
-    padding: 1px 20px;
-    border-radius: 30px;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
+    height: 356px;
+    margin: 40px 20px 0 0;
+    padding: 15px 15px 16px 14px;
+    border-radius: 5px;
+    border: solid 1px #e6e6e6;
 }
 
-.card2 .card-keyword2 {
+.cardType02 .card-wrap .card .card-title {
+    display: block;
+    font-size: 24px;
+}
+
+.cardType02 .card-wrap .card .card-desc {
     font-family: 'NEXON Lv1 Gothic';
-    background: #000;
-    text-align: center;
-    margin-left: 5px;
-    padding: 1px 20px;
-    border-radius: 30px;
-    color: #fff;
-    font-size: 14px;
     font-weight: 500;
+    display: block;
+}
+
+.cardType02 .card-wrap .card .card-word span {
+   margin: 6px 202px 0 1px;
+   padding: 4px 16px 3px;
+   border-radius: 20px;
+   background-color: #000;
+   display: inline-block;
+   color: #fff;
+   font-size: 10px;
+   text-transform: uppercase;
 }
