--- a/site/CSS/fonts.css
+++ b/site/CSS/fonts.css
@@ -112,3 +112,6 @@
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic Light.woff') format('woff');
     font-style: normal;
 }
+
+/* 구글 */
+@import url('https://fonts.googleapis.com/css2?family=Glegoo&display=swap');
