--- a/site/CSS/cardtype.css
+++ b/site/CSS/cardtype.css
@@ -247,8 +247,8 @@ body {
 }
 
 .cardType04 {
+    padding: 100px 0;
     font-family: 'NanumSquare';
-    padding: 60px 0;
 }
 
 .cardType04 h2 {
@@ -265,42 +265,105 @@ body {
 .cardType04 p {
     padding-bottom: 85px;
     font-family: Dotum;
-    font-size: 15px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
+    font-size: 16px;
     line-height: 1.28;
-    letter-spacing: normal;
     text-align: center;
 }
 
 .cardType04 .card-wrap {
+    width: 1400px;
     overflow: hidden;
     position: relative;
 }
 .cardType04 .card-wrap .card {
     width: 380px;
     height: 590px;
-    border: solid 0.5px #c4c4c4;
+    border: solid 0.5px #dfdfdf;
+    justify-content: space-between;
+    border-radius: 5px;
+    margin-right: 30px;
+    margin-bottom: 30px;
     float: left;
 }
-.cardType04 .card-wrap .card:nth-child(1) {
-    margin-right: 30px;
-    margin-bottom: 30px;
-}
-.cardType04 .card-wrap .card:nth-child(2) {
-    margin-right: 30px;
-    margin-bottom: 30px;
+
+.cardType04 .card-wrap .card:last-child {
+    margin: 0;
 }
 
 .cardType04 .card img {
-    width: 380px;
-    height: 367px;
+    padding-bottom: 30px;
 }
 .cardType04 .card .txt-box {
+    font-weight: 800;
+    font-size: 24px;
     position: absolute;
+    padding-left: 40px;
 }
-.cardType04 .card .txt-box .tilte {}
-.cardType04 .card .txt-box .new {}
-.cardType04 .card .txt-box .bt1 {}
-.cardType04 .card .txt-box .bt {}
+.cardType04 .card .txt-box .tilte {
+    padding-right: 10px;
+}
+
+.cardType04 .card:nth-child(1) .txt-box .tilte{
+    float: left;
+    display: block;
+}
+
+.cardType04 .card:nth-child(2) .txt-box .tilte{
+    float: left;
+    display: block;
+}
+
+.cardType04 .card .txt-box p {
+    font-size: 17px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.7;
+    letter-spacing: -1.7px;
+    padding-bottom: 20px;
+    text-align: left;
+    color: #4b4a48;
+    height: 58px;
+    
+}
+
+.cardType04 .card .txt-box .new {
+    font-size: 12px;
+    color: #fff;
+    padding: 5px 8px 5px 8px;
+    border-radius: 20px;
+    background-color: #f96357;
+}
+.cardType04 .card .txt-box .bt1 {
+    width: 51px;
+    height: 16px;
+    font-family: NanumSquare;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #fff;
+    padding: 8px 18px 8px 19px;
+    border-radius: 2px;
+    background-color: #05d684;
+    float: left;
+    margin-right: 10px;
+}
+.cardType04 .card .txt-box .bt {
+    width: 51px;
+    height: 16px;
+    font-family: NanumSquare;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    padding: 8px 18px 8px 19px;
+    border-radius: 2px;
+    border: solid 0.5px #c4c4c4;
+    background-color: #fff;
+    float: left;
+}
