--- a/site/CSS/cardtype.css
+++ b/site/CSS/cardtype.css
@@ -363,7 +363,7 @@ body {
     letter-spacing: normal;
     padding: 8px 18px 8px 19px;
     border-radius: 2px;
-    border: solid 0.5px #c4c4c4;
+    border: solid 0.5px #dfdfdf;
     background-color: #fff;
     float: left;
 }
