--- a/site/CSS/cardtype.css
+++ b/site/CSS/cardtype.css
@@ -239,19 +239,80 @@ body {
     margin-top: 20px;
 }
 
-/* cardType04 */
+
+/* cardTaye04 */
+
+#testType {
+    margin: 150px 0;
+    background-color: #fff;
+    box-shadow: 0 0 50px rgba(0,0,0,0.1);
+}
+
+.testType01 {
+    font-family: 'S-CoreDream';
+    font-weight: 400;
+    padding: 60px 0;
+}
+
+.testType01 h2 {
+    font-size: 52px;
+    text-align: center;
+    margin-bottom: 70px;
+    margin-top: 100px;
+    line-height: 1.3;
+}
+
+.testType01 .testwrap {
+    overflow: hidden;
+}
+.testType01 .testwrap .test{
+    float: left;
+    position: relative;
+    margin-bottom: 100px;
+}
+.testType01 .testwrap .test .t-img {
+    width: 384px;
+    height: 606px;
+}
+
+.testType01 .testwrap .test:first-child {
+    padding-right: 20px;
+}
+.testType01 .testwrap .test:nth-child(2) {
+    padding-right: 20px;
+}
+
+.testType01 .testwrap .txt-box {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+}
+.testType01 .testwrap .test .txt {
+    margin-bottom: 18px;
+    margin-left: 14px;
+    opacity: 0.3;
+}
+.testType01 .testwrap .test .tite {
+    margin-bottom: 445px;
+    margin-left: 14px;
+    font-size: 24px;
+}
+
+
+
+/* cardType05 */
 #cardType {
     margin: 150px 0;
     background-color: #fff;
     box-shadow: 0 0 50px rgba(0,0,0,0.1);
 }
 
-.cardType04 {
+.cardType05 {
     padding: 100px 0;
     font-family: 'NanumSquare';
 }
 
-.cardType04 h2 {
+.cardType05 h2 {
     padding-bottom: 10px;
     font-weight: 800;
     font-size: 42px;
@@ -262,7 +323,7 @@ body {
     text-align: center;
     color: #000;
 }
-.cardType04 p {
+.cardType05 p {
     padding-bottom: 85px;
     font-family: Dotum;
     font-size: 16px;
@@ -270,12 +331,12 @@ body {
     text-align: center;
 }
 
-.cardType04 .card-wrap {
+.cardType05 .card-wrap {
     width: 1400px;
     overflow: hidden;
     position: relative;
 }
-.cardType04 .card-wrap .card {
+.cardType05 .card-wrap .card {
     width: 380px;
     height: 590px;
     border: solid 0.5px #dfdfdf;
@@ -286,34 +347,34 @@ body {
     float: left;
 }
 
-.cardType04 .card-wrap .card:last-child {
+.cardType05 .card-wrap .card:last-child {
     margin: 0;
 }
 
-.cardType04 .card img {
+.cardType05 .card img {
     padding-bottom: 30px;
 }
-.cardType04 .card .txt-box {
+.cardType05 .card .txt-box {
     font-weight: 800;
     font-size: 24px;
     position: absolute;
     padding-left: 40px;
 }
-.cardType04 .card .txt-box .tilte {
+.cardType05 .card .txt-box .tilte {
     padding-right: 10px;
 }
 
-.cardType04 .card:nth-child(1) .txt-box .tilte{
+.cardType05 .card:nth-child(1) .txt-box .tilte{
     float: left;
     display: block;
 }
 
-.cardType04 .card:nth-child(2) .txt-box .tilte{
+.cardType05 .card:nth-child(2) .txt-box .tilte{
     float: left;
     display: block;
 }
 
-.cardType04 .card .txt-box p {
+.cardType05 .card .txt-box p {
     font-size: 17px;
     font-weight: normal;
     font-stretch: normal;
@@ -327,14 +388,14 @@ body {
     
 }
 
-.cardType04 .card .txt-box .new {
+.cardType05 .card .txt-box .new {
     font-size: 12px;
     color: #fff;
     padding: 5px 8px 5px 8px;
     border-radius: 20px;
     background-color: #f96357;
 }
-.cardType04 .card .txt-box .bt1 {
+.cardType05 .card .txt-box .bt1 {
     width: 51px;
     height: 16px;
     font-family: NanumSquare;
@@ -351,7 +412,7 @@ body {
     float: left;
     margin-right: 10px;
 }
-.cardType04 .card .txt-box .bt {
+.cardType05 .card .txt-box .bt {
     width: 51px;
     height: 16px;
     font-family: NanumSquare;
