--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -291,8 +291,9 @@ nav {
 
     //nav
     nav {
-        @include position-Center;
-        bottom: 5px;
+        width: 400px;
+        padding-left: 60px;
+        bottom: 10px;
         top: auto;
     
         li {
@@ -302,16 +303,17 @@ nav {
             a{
                 color: #fff;
                 text-decoration: none;
-                width: 53px;
-                height: 25px;
-                line-height: 25px;
+                width: 100px;
+                height: 30px;
+                line-height: 30px;
                 border: 1px solid #fff;
                 background: #fff;
                 color: #6c4a70;
                 display: inline-block;
-                border-radius: 10px;
-                font-size: 12px;
-                margin: 3px;
+                border-radius: 30px;
+                font-size: 16px;
+                text-align: center;
+                margin: 4px;
                 font-family: $font-NEXIN1;
                 box-shadow: inset 0 0 0 #fff;
                 }
