--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -286,12 +286,193 @@ nav li a:hover {
           box-shadow: 0 0 0 #fff inset;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+  cursor: pointer;
 }
 
 .info button:hover {
   -webkit-box-shadow: 0 -50px 0 #fff inset;
           box-shadow: 0 -50px 0 #fff inset;
   color: #000;
+  cursor: pointer;
+}
+
+#example {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+}
+
+#example .example-bg {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#example .example-bg .example-cont {
+  background: #fff;
+  padding: 3vw;
+  max-width: 50vw;
+  border-radius: 5px;
+}
+
+#example .example-bg .example-cont h2 {
+  font-weight: 400;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+#example .example-bg .example-cont p {
+  font-weight: 400;
+  line-height: 1.6;
+}
+
+#example .example-bg .example-cont button {
+  float: right;
+  background: transparent;
+  background: #000;
+  border: 1px solid #000;
+  padding: 5px 20px;
+  color: #fff;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+#example.show {
+  -webkit-animation: unfoldIn 1s ease forwards;
+          animation: unfoldIn 1s ease forwards;
+}
+
+#example.hide {
+  -webkit-animation: unfoldOut 1s ease forwards;
+          animation: unfoldOut 1s ease forwards;
+}
+
+@-webkit-keyframes unfoldIn {
+  0% {
+    -webkit-transform: scaley(0.005) scalex(0);
+            transform: scaley(0.005) scalex(0);
+  }
+  50% {
+    -webkit-transform: scaley(0.005) scalex(1);
+            transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    -webkit-transform: scaley(1) scalex(1);
+            transform: scaley(1) scalex(1);
+  }
+}
+
+@keyframes unfoldIn {
+  0% {
+    -webkit-transform: scaley(0.005) scalex(0);
+            transform: scaley(0.005) scalex(0);
+  }
+  50% {
+    -webkit-transform: scaley(0.005) scalex(1);
+            transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    -webkit-transform: scaley(1) scalex(1);
+            transform: scaley(1) scalex(1);
+  }
+}
+
+@-webkit-keyframes unfoldOut {
+  0% {
+    -webkit-transform: scaley(1) scalex(1);
+            transform: scaley(1) scalex(1);
+  }
+  50% {
+    -webkit-transform: scaley(0.005) scalex(1);
+            transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    -webkit-transform: scaley(0.005) scalex(0);
+            transform: scaley(0.005) scalex(0);
+  }
+}
+
+@keyframes unfoldOut {
+  0% {
+    -webkit-transform: scaley(1) scalex(1);
+            transform: scaley(1) scalex(1);
+  }
+  50% {
+    -webkit-transform: scaley(0.005) scalex(1);
+            transform: scaley(0.005) scalex(1);
+  }
+  100% {
+    -webkit-transform: scaley(0.005) scalex(0);
+            transform: scaley(0.005) scalex(0);
+  }
+}
+
+#example.show .example-bg .example-cont {
+  -webkit-transform: scaley(0);
+          transform: scaley(0);
+  -webkit-animation: zoomIn 0.5s 0.8s ease forwards;
+          animation: zoomIn 0.5s 0.8s ease forwards;
+}
+
+#example.hide .example-bg .example-cont {
+  -webkit-transform: scaley(0);
+          transform: scaley(0);
+  -webkit-animation: zoomOut 0.5s ease forwards;
+          animation: zoomOut 0.5s ease forwards;
+}
+
+@-webkit-keyframes zoomIn {
+  0% {
+    -webkit-transform: scaley(0);
+            transform: scaley(0);
+  }
+  100% {
+    -webkit-transform: scaley(1);
+            transform: scaley(1);
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    -webkit-transform: scaley(0);
+            transform: scaley(0);
+  }
+  100% {
+    -webkit-transform: scaley(1);
+            transform: scaley(1);
+  }
+}
+
+@-webkit-keyframes zoomOut {
+  0% {
+    -webkit-transform: scaley(1);
+            transform: scaley(1);
+  }
+  100% {
+    -webkit-transform: scaley(0);
+            transform: scaley(0);
+  }
+}
+
+@keyframes zoomOut {
+  0% {
+    -webkit-transform: scaley(1);
+            transform: scaley(1);
+  }
+  100% {
+    -webkit-transform: scaley(0);
+            transform: scaley(0);
+  }
 }
 
 @media (max-width: 800px) {
