--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -262,14 +262,101 @@ nav {
             border-radius: 50px;
             box-shadow: 0 0 0 #fff inset;
             transition: all 0.4s;
+            cursor: pointer;
 
             &:hover {
             box-shadow: 0 -50px 0 #fff inset;
             color: #000;
+            cursor: pointer;
             }
         }
     }
-    
+
+#example {
+    position: fixed;
+    left: 0; top: 0;
+    width: 100%; height: 100vh;
+    z-index: 1000;
+
+    //ex-bg
+    .example-bg {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .example-cont {
+            background: #fff;
+            padding: 3vw;
+            max-width: 50vw;
+            border-radius: 5px;
+
+            h2 {
+                font-weight: 400;
+                font-size: 30px;
+                margin-bottom: 10px;
+            }
+
+            p {
+                font-weight: 400;
+                line-height: 1.6;
+            }
+            button {
+                float: right;
+                background: transparent;
+                background: #000;
+                border: 1px solid #000;
+                padding: 5px 20px;
+                color: #fff;
+                border-radius: 50px;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+#example.show {
+    animation: unfoldIn 1s ease forwards;
+}
+
+#example.hide {
+    animation: unfoldOut 1s ease forwards;
+}
+@keyframes unfoldIn {
+	0%   {transform: scaley(0.005) scalex(0);}
+	50%  {transform: scaley(0.005) scalex(1);}
+	100% {transform: scaley(1) scalex(1);}
+}
+@keyframes unfoldOut {
+	0%   {transform: scaley(1) scalex(1);}
+	50%  {transform: scaley(0.005) scalex(1);}
+	100% {transform: scaley(0.005) scalex(0);}
+}
+
+#example.show .example-bg .example-cont {
+	transform: scaley(0);
+	animation: zoomIn 0.5s 0.8s ease forwards;
+}
+
+#example.hide .example-bg .example-cont {
+	transform: scaley(0);
+	animation: zoomOut 0.5s ease forwards;
+}
+
+@keyframes zoomIn {
+	0%   {transform: scaley(0)}
+	100% {transform: scaley(1)}
+}
+@keyframes zoomOut {
+	0%   {transform: scaley(1)}
+	100% {transform: scaley(0)}
+}
+
+
+
+
+
+//모바일 반응형
 @media (max-width: 800px) {
     //h1
     #contents {
