--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -277,6 +277,7 @@ nav {
     left: 0; top: 0;
     width: 100%; height: 100vh;
     z-index: 1000;
+    transform: scale(0);
 
     //ex-bg
     .example-bg {
