--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -303,6 +303,8 @@ nav li a:hover {
   width: 100%;
   height: 100vh;
   z-index: 1000;
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 #example .example-bg {
