--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -210,14 +210,17 @@ nav {
         color: #fff;
         font-family: $font-NEXIN1;
         padding: 20px;
+        position: absolute;
+        left: 0;
+        top: 0;
 
         &.right {
-            position: absolute;
+            left: auto;
             right: 0px;
-            top: 0px;
         }
         &.bottom {
-            position: absolute;
+            top: auto;
+            left: auto;
             bottom: 0;
             right: 0;
         }
@@ -225,6 +228,11 @@ nav {
             font-weight: 700;
             font-size: 30px;
             display: inline-block;
+            div {
+                float: left;
+                color: #ffc400;
+                padding-right: 10px;
+            }
         }
         p {
             font-weight: 100;
@@ -287,11 +295,6 @@ nav {
         justify-content: center;
 
         .example-cont {
-            background: #fff;
-            padding: 3vw;
-            max-width: 50vw;
-            border-radius: 5px;
-
             h2 {
                 font-weight: 400;
                 font-size: 30px;
@@ -311,6 +314,7 @@ nav {
                 color: #fff;
                 border-radius: 50px;
                 cursor: pointer;
+                margin-top: 10px;
             }
         }
     }
@@ -408,4 +412,75 @@ nav {
             }
             
         }
+}
+
+//code-view
+.code-view {
+    width: 60vw;
+    border: 1px solid #f2f2f2;
+    border-radius: 10px;
+    background: #fff;
+    overflow: hidden;
+
+    .view-heder {
+        border-bottom: 1px solid  #f2f2f2;
+        .dot {
+            padding: 13px 10px 10px 15px;
+
+            span{
+            width: 12px; height: 12px;
+            display: inline-block;
+            border-radius: 50%;
+            margin: 0 2px;
+            }
+
+            span:nth-child(1){
+                background-color: #f56565;
+            }
+            span:nth-child(2){
+                background-color: #f6e05e;
+            }
+            span:nth-child(3){
+                background-color: #48bb78;
+            }
+        }
+        
+    }
+    .view-title {
+        border-bottom: 1px solid  #f2f2f2;
+        padding: 0 11px;
+
+        li {
+            display: inline;
+            list-style: none;
+            a {
+                text-decoration: none;
+                color: #ccc;
+                padding: 10px 10px 12px;
+                margin: 0 5px;
+                display: inline-block;
+            }
+        &.active a {
+            border-top: 2px solid #667eea;
+            color: #4a5568;
+        }
+        
+        }
+    }
+    .view-cont {
+        h2 {
+            padding: 20px 20px 0;
+        }
+    }
+    .view-cont {
+        height: 500px;
+        overflow-y: scroll;
+        
+        > div{
+            display: none;
+        }
+        > div:nth-child(1) {
+            display: block;
+        }
+    }
 }
