--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -597,6 +597,7 @@ nav li a:hover {
 .code-view .view-cont {
   height: 500px;
   overflow-y: scroll;
+  background: #f8f8f8;
 }
 
 .code-view .view-cont > div {
