--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -476,6 +476,7 @@ nav {
     .view-cont {
         height: 500px;
         overflow-y: scroll;
+        background: #f8f8f8;
         
         > div{
             display: none;
