--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -481,56 +481,6 @@ nav li a:hover {
   }
 }
 
-@media (max-width: 800px) {
-  #contents h1 {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    font-size: 20vw;
-    line-height: 20vw;
-    text-align: center;
-    word-spacing: normal;
-    font-family: "Six Caps", sans-serif;
-    font-weight: normal;
-    text-transform: uppercase;
-    letter-spacing: 1vw;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #001735), to(#8200c9));
-    background-image: linear-gradient(to bottom, #001735 50%, #8200c9);
-  }
-  nav {
-    width: 400px;
-    padding-left: 60px;
-    bottom: 10px;
-    top: auto;
-  }
-  nav li {
-    list-style: none;
-    display: inline;
-  }
-  nav li a {
-    color: #fff;
-    text-decoration: none;
-    width: 100px;
-    height: 30px;
-    line-height: 30px;
-    border: 1px solid #fff;
-    background: #fff;
-    color: #6c4a70;
-    display: inline-block;
-    border-radius: 30px;
-    font-size: 16px;
-    text-align: center;
-    margin: 4px;
-    font-family: "NEXONLv1";
-    -webkit-box-shadow: inset 0 0 0 #fff;
-            box-shadow: inset 0 0 0 #fff;
-  }
-}
-
 .code-view {
   width: 60vw;
   border: 1px solid #f2f2f2;
@@ -606,4 +556,81 @@ nav li a:hover {
 
 .code-view .view-cont > div:nth-child(1) {
   display: block;
+}
+
+@media (max-width: 800px) {
+  #contents h1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: 20vw;
+    line-height: 20vw;
+    text-align: center;
+    word-spacing: normal;
+    font-family: "Six Caps", sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 1vw;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #001735), to(#8200c9));
+    background-image: linear-gradient(to bottom, #001735 50%, #8200c9);
+  }
+  nav {
+    width: 400px;
+    padding-left: 60px;
+    bottom: 10px;
+    top: auto;
+  }
+  nav li {
+    list-style: none;
+    display: inline;
+  }
+  nav li a {
+    color: #fff;
+    text-decoration: none;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid #fff;
+    background: #fff;
+    color: #6c4a70;
+    display: inline-block;
+    border-radius: 30px;
+    font-size: 16px;
+    text-align: center;
+    margin: 4px;
+    font-family: "NEXONLv1";
+    -webkit-box-shadow: inset 0 0 0 #fff;
+            box-shadow: inset 0 0 0 #fff;
+  }
+  #tab-menu {
+    width: 80%;
+  }
+  .info.right {
+    display: none;
+  }
+  .info.bottom {
+    top: auto;
+    left: auto;
+    bottom: 0;
+    right: 0;
+  }
+  .info h1 {
+    font-weight: 500;
+    font-size: 25px;
+    display: inline-block;
+  }
+  .info h1 div {
+    float: left;
+    color: #ffc400;
+    padding-right: 10px;
+  }
+  .info p {
+    font-weight: 100;
+    font-style: 14px;
+    margin-top: 20px;
+  }
 }
