--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -448,6 +448,15 @@ nav {
            -webkit-background-clip: text;
            background-image: linear-gradient(to bottom, #001735 50%, #8200c9);
         }
+        //ex-bg
+        .example-bg {
+            background: rgba(0, 0, 0, 0.5);
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            }
     }
 
     //nav
@@ -482,21 +491,10 @@ nav {
             
         }
 
-    //메뉴
-    #tab-menu {
-        width: 80%;
-    }
-
     //인포
     .info {
         &.right {
             display: none;
-        }
-        &.bottom {
-            top: auto;
-            left: auto;
-            bottom: 0;
-            right: 0;
         }
         h1 {
             font-weight: 500;
@@ -512,6 +510,40 @@ nav {
             font-weight: 100;
             font-style: 14px;
             margin-top: 20px;
+        }
+        button {
+            font-size: 15px;
+            background: #fff;
+            padding: 5px 20px;
+            color: #000;
+            border-radius: 50px;
+            box-shadow: 0 0 0 #fff inset;
+            }
+    }
+
+    //뷰(소스보기)
+    .code-view {
+        width: 80vw;
+        height: 100vw;
+        border: 1px solid #f2f2f2;
+        border-radius: 10px;
+        background: #fff;
+        overflow: hidden;
+        .view-title {
+            border-bottom: 1px solid  #f2f2f2;
+            padding: 0 11px;
+    
+            li {
+                display: inline;
+                list-style: none;
+                a {
+                    text-decoration: none;
+                    color: #ccc;
+                    padding: 5px 5px 8px;
+                    margin: 0 5px;
+                    display: inline-block;
+                }
+            }
         }
     }
 }
