20210903오늘수업 업로드
업로드하기

--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -100,6 +100,14 @@ $gradient6: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 100%);
     position: absolute;
 }
 
+//agent
+.iphone main {
+    padding: 20px;
+}
+.android main {
+    padding: 10px;
+}
+
 //bg1
 .bg {
     position: relative;
