--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -681,3 +681,227 @@ nav li a:hover {
     display: inline-block;
   }
 }
+
+.parallax {
+  background: #222;
+  color: #fff;
+  font-family: 'NEXONLv1Gothic';
+}
+
+.paraScroll {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.4);
+  color: #fff;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 14px;
+  padding: 0px 20px;
+}
+
+.paraInfo2 {
+  position: fixed;
+  left: 20px;
+  bottom: 70px;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 20px;
+  font-size: 14px;
+  line-height: 1.8;
+  border-radius: 20px;
+  z-index: 1000;
+}
+
+.paraInfo2 li {
+  list-style: none;
+}
+
+.paraNav {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 15px 20px;
+  border-radius: 50px;
+}
+
+.paraNav li {
+  display: inline-block;
+  list-style: none;
+}
+
+.paraNav li a {
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  padding: 5px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+}
+
+.paraNav li.active a {
+  background: #fff;
+  color: #000;
+  border-radius: 50%;
+}
+
+.paraInfo {
+  padding: 20px;
+}
+
+.paraInfo h1 {
+  font-weight: 500;
+  font-size: 30px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.paraInfo h1 a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.paraInfo p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.8;
+}
+
+.paraCont {
+  width: 100%;
+  overflow: hidden;
+}
+
+.paraCont .content-item {
+  width: 1000px;
+  max-width: 70vw;
+  margin: 30vw 0;
+  padding-top: 10vw;
+  text-align: right;
+  position: relative;
+}
+
+.paraCont .content-item .num {
+  font-family: 'Lato';
+  font-weight: 100;
+  font-size: 25vw;
+  opacity: 0.07;
+  position: absolute;
+  right: -5vw;
+  top: -10vw;
+}
+
+.paraCont .content-item .title {
+  padding-bottom: 10px;
+  font-weight: 700;
+}
+
+.paraCont .content-item .img-Wrap {
+  width: 100%;
+  padding-bottom: 56%;
+  background: #000;
+  position: relative;
+}
+
+.paraCont .content-item .img-Wrap .img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-filter: saturate(0%);
+          filter: saturate(0%);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.paraCont .content-item .img-Wrap .img:hover {
+  -webkit-filter: saturate(100%);
+          filter: saturate(100%);
+}
+
+.paraCont .content-item .desc {
+  font-size: 5vw;
+  line-height: 1.4;
+  margin-top: -6vw;
+  margin-right: -3vw;
+  position: relative;
+  z-index: 100;
+  word-break: keep-all;
+}
+
+.paraCont .content-item:nth-child(even) {
+  margin-left: auto;
+  text-align: left;
+}
+
+.paraCont .content-item:nth-child(even) .num {
+  right: auto;
+  left: -5vw;
+}
+
+.paraCont .content-item:nth-child(even) .desc {
+  margin-right: auto;
+  margin-left: -3vw;
+}
+
+.content-item:nth-child(1) .img {
+  background-image: url(../img/bg01.jpg);
+}
+
+.content-item:nth-child(2) .img {
+  background-image: url(../img/bg02.jpg);
+}
+
+.content-item:nth-child(3) .img {
+  background-image: url(../img/bg03.jpg);
+}
+
+.content-item:nth-child(4) .img {
+  background-image: url(../img/bg04.jpg);
+}
+
+.content-item:nth-child(5) .img {
+  background-image: url(../img/bg05.jpg);
+}
+
+.content-item:nth-child(6) .img {
+  background-image: url(../img/bg06.jpg);
+}
+
+.content-item:nth-child(7) .img {
+  background-image: url(../img/bg07.jpg);
+}
+
+.content-item:nth-child(8) .img {
+  background-image: url(../img/bg08.jpg);
+}
+
+.content-item:nth-child(9) .img {
+  background-image: url(../img/bg09.jpg);
+}
+
+.source button {
+  border: none;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 1000;
+  background: rgba(255, 255, 255, 0.7);
+  color: #000;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 14px;
+  padding: 0px 25px;
+  cursor: pointer;
+}
