--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -188,7 +188,6 @@ nav {
     li {
         list-style: none;
         display: inline;
-
         a{
             color: #fff;
             text-decoration: none;
@@ -558,4 +557,180 @@ nav {
             }
         }
     }
+}
+
+
+
+// parallax
+.parallax {
+    background: #222;
+    color: #fff;
+    font-family: 'NEXONLv1Gothic';
+}
+.paraScroll {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    z-index: 1000;
+    background: rgba(0,0,0,.4);
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 14px;
+    padding: 0px 20px;
+}
+.paraInfo2 {
+    position: fixed;
+    left: 20px;
+    bottom: 70px;
+    background: rgba(0,0,0,.4);
+    padding: 20px;
+    font-size: 14px;
+    line-height: 1.8;
+    border-radius: 20px;
+    z-index: 1000;
+    
+    li{
+        list-style: none;
+    }
+}
+
+
+.paraNav {
+    position: fixed;
+    right: 20px; top: 20px;
+    z-index: 1000;
+    background: rgba(0,0,0,.4);
+    padding: 15px 20px;
+    border-radius: 50px;
+    li {
+        display: inline-block;
+        list-style: none;
+        a {
+            color: #fff;
+            text-decoration: none;
+            display: inline-block;
+            padding: 5px;
+            width: 30px; height: 30px;
+            text-align: center;
+            line-height: 30px;
+        }
+        &.active a {
+            background: #fff;
+            color: #000;
+            border-radius: 50%;
+        }
+    }
+}
+.paraInfo {
+    padding: 20px;
+    h1 {
+        font-weight: 500;
+        font-size: 30px;
+        margin-bottom: 10px;
+        display: inline-block;
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+    }
+    p {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.8;
+    }
+}
+.paraCont {
+    width: 100%;
+    overflow: hidden;
+    .content-item {
+        width: 1000px;
+        max-width: 70vw;
+        // background: rgba(255,255,255,0.3);
+        margin: 30vw 0;
+        padding-top: 10vw;
+        text-align: right;
+        position: relative;
+        .num {
+            font-family: 'Lato';
+            font-weight: 100;
+            font-size: 25vw;
+            opacity: 0.07;
+            position: absolute;
+            right: -5vw; top: -10vw;
+        }
+        .title {
+            padding-bottom: 10px;
+            font-weight: 700;
+        }
+        .img-Wrap {
+            width: 100%;
+            padding-bottom: 56%;
+            background: #000;
+            position: relative;
+            .img {
+                position: absolute;
+                left: 0; top: 0;
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-repeat: no-repeat;
+                filter: saturate(0%);
+                transition: all 1s;
+                &:hover{
+                    filter: saturate(100%);
+                }
+            }
+            
+        }
+        .desc {
+            font-size: 5vw;
+            line-height: 1.4;
+            margin-top: -6vw;
+            margin-right: -3vw;
+            position: relative;
+            z-index: 100;
+            word-break: keep-all;
+        }
+        &:nth-child(even){
+            margin-left: auto;
+            text-align: left;
+            .num {
+                right: auto; 
+                left: -5vw;
+            }
+            .desc {
+                margin-right: auto;
+                margin-left: -3vw;
+            }
+        }
+    }
+}
+@for $i from 1 through 9 {
+    .content-item {
+        &:nth-child(#{$i}){
+            .img {
+                background-image: url(../img/bg0#{$i}.jpg);
+            }
+        }
+    }
+}
+
+.source button {
+    border: none;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    z-index: 1000;
+    background: rgba(255, 255, 255, 0.7);
+    color: #000;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 14px;
+    padding: 0px 25px;
+    cursor: pointer;
 }
