--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -734,3 +734,57 @@ nav {
     padding: 0px 25px;
     cursor: pointer;
 }
+
+
+//paraFooter
+.paraFooter {
+    padding: 200px 0;
+    h1 {
+        font-size: 8vw;
+        line-height: 1.2;
+        padding: 10vw 8vw 0 8vw;
+        text-transform: uppercase;
+        margin-bottom: 3vw;
+        }
+        em {
+            display: block;
+            font-family: 'Lato';
+            font-weight: 100;
+            padding-left: 18vw;
+        }
+}
+.footerInfo {
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #000;
+    padding: 15px 20px;
+    margin-bottom: 2px;
+    
+    h2 {
+        padding: 20px;
+    }
+    li {
+        display: inline;
+        list-style: none;
+        
+        a{
+            color: #fff;
+            border: 1px dashed #fff;
+            width: 30px; height: 30px;
+            border-radius: 50%;
+            line-height: 30px;
+            text-decoration: none;
+            list-style: none;
+        }
+        
+        &:active a {
+            background: #fff;
+            color: #000;
+        }
+    }
+}
+
+
