--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -100,6 +100,10 @@ figcaption {
   z-index: -1;
 }
 
+.bg.rad::before {
+  background: rgba(105, 68, 26, 0.8);
+}
+
 .bg1 {
   background-image: url(../img/bg01@x2.jpg);
 }
@@ -244,6 +248,12 @@ nav li a:hover {
   right: 0px;
 }
 
+.info.left {
+  top: auto;
+  left: 0;
+  bottom: 0;
+}
+
 .info.bottom {
   top: auto;
   left: auto;
@@ -261,6 +271,12 @@ nav li a:hover {
   float: left;
   color: #ffc400;
   padding-right: 10px;
+}
+
+.info a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
 }
 
 .info p {
@@ -311,6 +327,21 @@ nav li a:hover {
           box-shadow: 0 -50px 0 #fff inset;
   color: #000;
   cursor: pointer;
+}
+
+.info.list {
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.4);
+  color: #fff;
+  padding: 20px;
+  font-size: 12px;
+  line-height: 20px;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.info.list li {
+  display: block;
 }
 
 #example {
