--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -704,15 +704,17 @@ nav {
             padding-bottom: 56%;
             background: #000;
             position: relative;
+            overflow: hidden;
+
             .img {
                 position: absolute;
-                left: 0; top: 0;
-                width: 100%;
-                height: 100%;
+                left: -10%; top: -10%;
+                width: 120%;
+                height: 120%;
                 background-size: cover;
                 background-repeat: no-repeat;
                 filter: saturate(0%);
-                transition: all 1s;
+                transition: filter 1s;
                 &:hover{
                     filter: saturate(100%);
                 }
@@ -771,7 +773,7 @@ nav {
 
 
 //paraFooter
-.paraFooter {
+#paraFooter {
     padding: 200px 0;
     h1 {
         font-size: 8vw;
@@ -800,23 +802,26 @@ nav {
     h2 {
         padding: 20px;
     }
-    li {
-        display: inline;
-        list-style: none;
-        
-        a{
-            color: #fff;
-            border: 1px dashed #fff;
-            width: 30px; height: 30px;
-            border-radius: 50%;
-            line-height: 30px;
-            text-decoration: none;
+    
+    ul {
+        li {
+            display: inline;
             list-style: none;
-        }
-        
-        &:active a {
-            background: #fff;
-            color: #000;
+            
+            a{
+                color: #fff;
+                // border: 1px dashed #fff;
+                width: 30px; height: 30px;
+                border-radius: 50%;
+                line-height: 30px;
+                text-decoration: none;
+                list-style: none;
+            }
+            
+            &:active a {
+                background: #fff;
+                color: #000;
+            }
         }
     }
 }
